=== Modified version of GNU Emacs for Mac OS X ===

Version 23.2-modified-4-i386 (8 June 2010)
==========================================

UPDATE

o ESS 5.10


Version 23.2-modified-3-i386 (27 May 2010)
==========================================

UPDATE

o Activate ess-nuke-trailing-whitespace in site-start.el to
  automagically delete trailing whitespace when saving R script files.


Version 23.2-modified-2-i386 (25 May 2010)
==========================================

UPDATE

o ESS 5.9.1

NEW FEATURE

o New code in site-start.el to defensively find latex in case the PATH
  environment variable was not correctly altered at TeX Live
  installation. Contributed by Rodney Sparapani <rsparapa@mcw.edu>.


Version 23.2-modified-1-i386 (11 May 2010)
==========================================

UPDATE

o GNU Emacs 23.2, released May 8, 2010. This is a 32-bit Intel binary
  that should work on OS X 10.4 and above. We now base the
  distribution on the latest stable release of Emacs since it builds
  on Snow Leopard.


Version 23.1.93-modified-4-i386 (16 March 2010)
===============================================

NEW FEATURE

o Introduced the architecture in the distribution name for clarity.

BUG FIX

o I am learning how to compile on OS X... This binary should work on
  10.4 (Tiger) and 10.5 (Leopard) system as well as on 10.6 (Snow
  Leopard). Thanks to Nick Bell <nick.bell@ed.ac.uk> for the heads up
  and testing.


Version 23.1.93-modified-3 (13 March 2010)
==========================================

USER VISIBLE CHANGE

o Fixed the default PDF viewer invocation on OS X. Customization
  changed with AUCTeX 11.86 and site-start.el was not adpated
  accordingly.


Version 23.1.93-modified-2 (9 March 2010)
=========================================

BUG FIX

o The previous version was a 64-bit application. This version is a
  32-bit Intel application that should run on older OS X releases.


Version 23.1.93-modified-1 (8 March 2010)